# SoloTemplate

./: CMakeLists.txt  CMakePresets.json  README.md  SoloTemplate.cpp  SoloTemplate.h
src/renderer/: IBO.cpp  Renderer.h  Shader.cpp  Shader.h  VAO.h  VBO.cpp  VBO.h  VBOLayout.h
x86-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  SoloTemplate.ilk  build.ninja  cmake_install.cmake  imgui.ini
x86-debug/.cmake/api/v1/reply/: cache-v2-949e8220665896c813f2.json  cmakeFiles-v1-8f009c1bc96511ee4290.json  codemodel-v2-caa4840ee994dcf6ccfe.json  codemodel-v2-cdbc58a00f2cdb02cc6a.json  codemodel-v2-d576eb159ff30fbbff6c.json  index-2023-08-06T13-48-41-0799.json  index-2023-08-06T16-36-23-0397.json  index-2023-08-09T10-40-45-0525.json  target-SoloTemplate-Debug-3a31d5aeb87705ed3973.json  target-SoloTemplate-Debug-7afe4ff26aea10cad4b3.json  target-SoloTemplate-Debug-c217a04aee23f186671b.json
x86-debug/src/renderer/: Folder.cpp  Folder.h  IBO.cpp  IBO.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderFolder.cpp  ShaderFolder.h  Texture.h  VAO.cpp  VBO.h  VBOLayout.h
x86-debug/src/shaders/: MainMenu.shader  Shader.shader
x86-debug/src/tests/: Test.cpp  Test.h  TestMainMenu.cpp  TestMainMenu.h  TestSampleScene.cpp  TestSampleScene.h
x86-debug/src/window_handling/: Window.cpp  Window.h
